export default function useHi() {
  return 'Hi!';
}
