appId: com.neurorif.simba
---
- assertVisible: Hello World
- assertVisible: 4
- assertVisible: Hi!
- assertVisible: 0
- tapOn:
    id: increase
- assertVisible: 1
